
plugins {
    id 'java'
    id 'org.springframework.boot' version '2.6.2'
    id 'io.spring.dependency-management' version '1.0.11.RELEASE'
}


group = 'com.elanza48'
version = '0.6.1-SNAPSHOT'
description = 'TourismManagementSystem'
java.sourceCompatibility = JavaVersion.VERSION_11

repositories {
    mavenLocal()
    mavenCentral()
    maven {
        url = uri('https://repo.maven.apache.org/maven2/')
    }
}

ext{
    mapstruct_version='1.4.2.Final'
    projectlombok_version= '1.18.22'
    bouncycastle_version='1.69'
}

dependencies {
    implementation 'org.springframework:spring-context-support'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-hateoas'
    implementation 'org.springframework.boot:spring-boot-starter-log4j2'
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    implementation 'org.springframework.boot:spring-boot-starter-cache'
    implementation 'javax.cache:cache-api'
    implementation 'org.ehcache:ehcache'
    implementation 'org.hibernate:hibernate-jcache'
    implementation 'org.hibernate.validator:hibernate-validator'
    implementation 'org.postgresql:postgresql'
    implementation 'com.auth0:java-jwt:3.18.2'

    implementation "org.bouncycastle:bcprov-jdk15on:${bouncycastle_version}"
    implementation "org.bouncycastle:bcpkix-jdk15on:${bouncycastle_version}"

    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.security:spring-security-test'
}

dependencies {
    compileOnly "org.projectlombok:lombok:${projectlombok_version}"
    compileOnly "org.mapstruct:mapstruct:${mapstruct_version}"

    annotationProcessor "org.projectlombok:lombok-mapstruct-binding:0.2.0"
    annotationProcessor "org.mapstruct:mapstruct-processor:${mapstruct_version}"
    annotationProcessor "org.projectlombok:lombok:${projectlombok_version}"
}

configurations {
    all{
        exclude group: 'org.springframework.boot', module: 'spring-boot-starter-logging'
    }
}

tasks.withType(JavaCompile) {
    options.encoding = 'UTF-8'
    options.compilerArgs =[
            '-Amapstruct.defaultComponentModel=spring'
    ]
}

test{
    useJUnitPlatform()
}
